# oarepo-c4gh

./: .gitignore  LICENSE  MANIFEST.in  README.md  gpg-agent-forward.sh  mkdocs.yml  pyproject.toml  pytest.ini  run-tests.sh
.github/workflows/: build.yaml  manual.yaml  mkdocs_ghpages.yaml  push.yaml
docs/: container.md  exceptions.md  implementation.md  index.md  keys.md  network.md
oarepo_c4gh/: __init__.py  exceptions.py
oarepo_c4gh/crypt4gh/: __init__.py  acrypt4gh.py  aheader.py  analyzer.py  crypt4gh.py  data_block.py  dek.py  dek_collection.py  filter.py  header.py  header_packet.py  proto4gh.py  stream_header4gh.py  stream_header_packet.py  util.py  writer.py
oarepo_c4gh/crypt4gh/common/: __init__.py  data_block.py  header.py  header_packet.py  proto4gh.py
oarepo_c4gh/crypt4gh/filter/: add_recipient.py  add_recipient_header.py  filter.py  filter4gh.py  header.py  only_readable.py  only_readable_header.py
oarepo_c4gh/crypt4gh/stream/: __init__.py  header.py  header_packet.py  stream4gh.py
oarepo_c4gh/key/: __init__.py  c4gh.py  external.py  external_software.py  gpg_agent.py  http.py  http_path_key_server.py  key.py  key_collection.py  software.py  writer.py  yubikey.py
tests/: _test_data.py  test_c4gh.py  test_crypt4gh.py  test_deks.py  test_key.py  test_key_collection.py  test_key_gpg_agent.py  test_key_http.py  test_key_http_server.py  test_software.py  test_writer.py
