[project]
name = "oarepo_c4gh"
version = "0.12"
authors = [
  { name = "Dominik Pantůček", email = "dominik.pantucek@trustica.cz" }
]
description = ""
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]
dependencies = [
    "pynacl>=1.5.0",
    "bcrypt",
    "cryptography",
]

[tool.setuptools]

[project.urls]
Homepage = "https://github.com/oarepo/oarepo-c4gh"
Issues = "https://github.com/oarepo/oarepo-c4gh/issues"

[project.optional-dependencies]
dev = [
    "mkdocstrings[python]>=0.18",
    "mkdocs-material",
    "pytest",
    "pytest-cov",
    "types-uwsgi>=2.0.0.20250809",
]
